# bl-env

./: .bl-env.yaml  .blenv.yaml  .env  .gitignore  DOCUMENTATION.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  test.sh
blender-env/: pyproject.toml
blender-env/src/blenv/: __init__.py  __main__.py  commands.py
blender-env/tests/: .blenv.advanced.yaml  .blenv.basic.yaml  conftest.py  test_blenv.py  test_blenv_files.py
examples/: splash.blend
examples/1/: bl-env.conf
examples/bl-hello-app-template/: .blenv.yaml  .env  README.md  requirements.txt
examples/bl-hello-app-template/.blenv/scripts/startup/bl_app_templates_user/: hello_app_template
examples/bl-hello-app-template/bl_hello_donut/: __init__.py  startup.blend
examples/bl-hello-app-template/hello_app_template/: __init__.py
examples/bl-hello-app-template/src/hello_app_template/: __init__.py
examples/bl-hello-extension/: .blenv.yaml  .env  run.sh  start.sh
examples/bl-hello-extension/src/object_cursor_array/: __init__.py  blender_manifest.toml
src/blenv/: __init__.py  __main__.py
tests/: __init__.py  test_blenv.py  test_cli.py  test_run_blender.py
