[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'blender-env'
version = '0.0.1'
authors = [
  { name='Brad Corlett', email='brad.corlett@gmail.com' },
]
description = 'A utility for creating and managing Blender development environments'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
  # 'bpy',
  # 'fake-bpy-module-latest',
  'pydantic',
  'pyyaml',
  'python-dotenv',
  'typer'
]
