[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'blenv'
version = '0.0.1b0'
authors = [
  { name='Brad Corlett', email='medium.tech.dev@gmail.com' },
]
description = "README.md"
license = {file = "LICENSE.txt"}
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
  # 'bpy',
  # 'fake-bpy-module-latest',
  'pydantic',
  'pyyaml',
  'python-dotenv',
  'typer'
]
